--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap');
+
 @font-face {
   font-family: 'Montserrat';
   src: url('../src/assets/fonts/Montserrat/Montserrat-VariableFont_wght.ttf') format('truetype');
